change tag and add more words

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <title>Generador de Excusas en Javascript</title>
   </head>
   <body>
-    <h1>OMG! you will not believe me but...</h1>
+    <p>OMG! you will not believe me but...</h1>
     <p id="excuse">My dog eat my homework</p>
 
     <script src="./main.js"></script>
